@@ -1,3 +1,7 @@
+Wed Aug  5 22:38:14 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* varray.rb: [BUG#131] VArray#index_on_arrayを直した.
+
 Wed Aug  5 22:17:57 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* b-there.rb, controller.rb, n-there.rb, file-place.rb: [SR#102]
